# cinch

./: .gitmodules  Cargo.toml  README.md
adapter/: README.md  genkeys.sh  stunnel_config.client  stunnel_config.server
configs/: sample.json
exploits/: CVE-2015-5257.py  CVE-2015-7566.py  CVE-2016-2184.py  CVE-2016-2185.py  CVE-2016-2186.py  CVE-2016-2187.py  CVE-2016-2188.py  CVE-2016-2384.py  CVE-2016-2782.py  CVE-2016-3136.py  CVE-2016-3137.py  CVE-2016-3138.py  CVE-2016-3139.py  CVE-2016-3140.py  CVE-2016-3951.py  README.md
scripts/: device_setup  iommu_setup  launch-blue  launch-red  parse-logs  replay-logs
src/: lib.rs  main.rs
src/modules/: logger.rs  mod.rs  null.rs  patcher.rs  reset.rs  selector.rs
src/modules/control_checks/: bbb.rs  hid.rs  mod.rs  printer.rs  third_party.rs
src/parser/: mod.rs  usbr-spec.txt  usbr.rs
src/usb/: bbb.rs  hid.rs  mod.rs  printer.rs
src/util/: config.rs  lockext.rs  mod.rs
tests/: control_checks.rs  parser.rs
third-party-checks/: ati_remote2.json  cdc_acm.json  cypress_m8.json  digi_acceleport.json  gtco.json  iowarrior.json  mct_u232.json  midisport.json  powermate.json  sound_quirks.json  visor.json  wacom.json
