[package]
name = "cinch"
version = "0.1.2"
authors = ["Sebastian Angel <sebs@cs.utexas.edu>"]
license = "CC0 1.0 Universal"
repository = "https://github.com/sga001/cinch"

[dependencies]
log = ">= 0.3.6"
env_logger = ">= 0.3.5"
byteorder = ">= 0.5.1"
conv = ">= 0.3.3"
custom_derive = ">= 0.1.5"
time = ">= 0.1.34"
rustc-serialize = ">= 0.3.19"
getopts = ">= 0.2.14"

[dev-dependencies]
rand = ">= 0.3.14"
